修改了特效

--- a/javascript/partials/directive/navlist.html
+++ b/javascript/partials/directive/navlist.html
@@ -1,7 +1,7 @@
 <ul ng-class="{'submenu':isSubmenu,'nav nav-list':!isSubmenu}"
-    ng-show="display=='block'">
+    ng-show="display=='block'"
+    class="slide-right">
 
     <nav ng-repeat='child in children' menu='child'></nav>
-    <!-- ng-style="{display:display}"-->
 </ul>
 
