--- a/javascript/partials/home_content.html
+++ b/javascript/partials/home_content.html
@@ -2,7 +2,7 @@
 <div class="main-content-inner">
 
     <!--面包屑导航-->
-    <div ui-view="breadcrumbsView" class="breadcrumbs breadcrumbs-fixed slide-top"></div>
+    <!--<div ui-view="breadcrumbsView" class="breadcrumbs breadcrumbs-fixed slide-top"></div>-->
     <!--页面内容-->
     <div ui-view="pageContentView" class="page-content bouncy-scale-in"></div>
 
