修改了路由的加载

--- a/javascript/partials/pages/test1.html
+++ b/javascript/partials/pages/test1.html
@@ -1,10 +1,11 @@
-<div class="page-header">
+<div class="page-header" ng-controller="Test1Controller as testCtl">
     <h1>
         Tables
         <small>
             <i class="ace-icon fa fa-angle-double-right"></i>
             Static &amp; Dynamic Tables
         </small>
+        <span ng-bind="testCtl.now"></span>
     </h1>
 </div>
 
