--- a/javascript/partials/pages/test2.html
+++ b/javascript/partials/pages/test2.html
@@ -3,7 +3,7 @@
         Tables
         <small>
             <i class="ace-icon fa fa-angle-double-right"></i>
-            Static &amp; Dynamic Tables
+            TEST2 Static &amp; Dynamic Tables
         </small>
         <span ng-bind="testCtl.now"></span>
     </h1>
