--- a/javascript/partials/directive/toolbar.html
+++ b/javascript/partials/directive/toolbar.html
@@ -1,10 +1,37 @@
-<button class="btn"
-        ng-repeat="tool in tools"
-        ng-class="tool.level"
-        ng-click="tool.click()"
-        popover="{{ tool.title }}" popover-trigger="mouseenter">
+<!--扑通状态的按钮-->
+<a class="btn"
+   ng-if="!showmini"
+   ng-repeat="tool in tools"
+   ng-class="tool.level"
+   ng-click="tool.click()"
+   popover="{{ tool.title }}"
+   popover-trigger="mouseenter">
     <i class="ace-icon fa"
        ng-if="tool.iconCls"
        ng-class="tool.iconCls"></i>
     <span ng-bind="tool.title" ng-if="showtitle"></span>
-</button>
+</a>
+
+<!--小尺寸下的按钮-->
+<div class="inline pos-rel open"
+     ng-if="showmini"
+     ng-class="{open1:isOpen}">
+    <a class="btn btn-minier btn-primary dropdown-toggle"
+       href="javascript:;"
+       ng-blur="doBlur()"
+       ng-click="doShowMenu()">
+        <i class="ace-icon fa fa-cog icon-only bigger-110"></i>
+    </a>
+
+    <ul class="dropdown-menu dropdown-only-icon dropdown-yellow dropdown-menu-right dropdown-caret dropdown-close bouncy-scale-in"
+        ng-show="isOpen">
+        <li ng-repeat="tool in tools">
+            <a class="tooltip-info"
+               ng-click="tool.click()">
+                <span class="blue">
+                    <i class="ace-icon fa" ng-class="tool.iconCls"></i>
+                </span>
+            </a>
+        </li>
+    </ul>
+</div>
