--- a/javascript/partials/pages/test1.html
+++ b/javascript/partials/pages/test1.html
@@ -13,11 +13,13 @@
 
     <div class="row">
         <div class="col-xs-12">
-            <div toolbar tools="testCtl.tools" class="btn-group hidden-sm hidden-xs">
+            <div toolbar showmini="false" showtitle="true" tools="testCtl.tools" class="btn-group hidden-sm hidden-xs">
                 <div class="btn-group">
 
                 </div>
             </div>
+            <div class="space-6"></div>
+
         </div>
         <div class="col-xs-12">
             <table id="simple-table" class="table table-striped table-bordered table-hover">
@@ -64,47 +66,13 @@
                     </td>
 
                     <td>
-                        <div toolbar showtitle="false" tools="testCtl.tools" class="hidden-sm hidden-xs btn-group">
+                        <div toolbar showmini="false" showtitle="false" tools="testCtl.tools"
+                             class="hidden-sm hidden-xs btn-group"></div>
 
-                        </div>
+                        <div class="hidden-md hidden-lg" toolbar showmini="true" showtitle="false"
+                             tools="testCtl.tools"></div>
 
-                        <div class="hidden-md hidden-lg">
-                            <div class="inline pos-rel">
-                                <button class="btn btn-minier btn-primary dropdown-toggle" data-toggle="dropdown"
-                                        data-position="auto">
-                                    <i class="ace-icon fa fa-cog icon-only bigger-110"></i>
-                                </button>
 
-                                <ul class="dropdown-menu dropdown-only-icon dropdown-yellow dropdown-menu-right dropdown-caret dropdown-close">
-                                    <li>
-                                        <a href="#" class="tooltip-info" data-rel="tooltip" title=""
-                                           data-original-title="View">
-																			<span class="blue">
-																				<i class="ace-icon fa fa-search-plus bigger-120"></i>
-																			</span>
-                                        </a>
-                                    </li>
-
-                                    <li>
-                                        <a href="#" class="tooltip-success" data-rel="tooltip" title=""
-                                           data-original-title="Edit">
-																			<span class="green">
-																				<i class="ace-icon fa fa-pencil-square-o bigger-120"></i>
-																			</span>
-                                        </a>
-                                    </li>
-
-                                    <li>
-                                        <a href="#" class="tooltip-error" data-rel="tooltip" title=""
-                                           data-original-title="Delete">
-																			<span class="red">
-																				<i class="ace-icon fa fa-trash-o bigger-120"></i>
-																			</span>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
                     </td>
                 </tr>
 
@@ -175,9 +143,9 @@
                                     <li>
                                         <a href="#" class="tooltip-error" data-rel="tooltip" title=""
                                            data-original-title="Delete">
-																			<span class="red">
-																				<i class="ace-icon fa fa-trash-o bigger-120"></i>
-																			</span>
+                                                <span class="red">
+                                                    <i class="ace-icon fa fa-trash-o bigger-120"></i>
+                                                </span>
                                         </a>
                                     </li>
                                 </ul>
