特效优化，移动端的适配

--- a/javascript/partials/home/home_content.html
+++ b/javascript/partials/home/home_content.html
@@ -4,6 +4,6 @@
     <!--面包屑导航-->
     <!--<div ui-view="breadcrumbsView" class="breadcrumbs breadcrumbs-fixed slide-top"></div>-->
     <!--页面内容-->
-    <div ui-view="pageContentView" class="page-content bouncy-scale-in"></div>
+    <div ui-view="pageContentView" class="page-content bouncy-scale-in my-rotate-in"></div>
 
 </div>
