--- a/javascript/partials/login/register.html
+++ b/javascript/partials/login/register.html
@@ -3,18 +3,18 @@
         <div class="widget-main">
             <h4 class="header green lighter bigger">
                 <i class="ace-icon fa fa-users blue"></i>
-                New User Registration
+                用户注册
             </h4>
 
             <div class="space-6"></div>
-            <p> Enter your details to begin: </p>
+            <p> 请填写以下信息: </p>
 
             <form>
                 <fieldset>
                     <label class="block clearfix">
                         <span class="block input-icon input-icon-right">
                             <input type="email" class="form-control"
-                                   placeholder="Email">
+                                   placeholder="邮箱">
                             <i class="ace-icon fa fa-envelope"></i>
                         </span>
                     </label>
@@ -22,7 +22,7 @@
                     <label class="block clearfix">
                         <span class="block input-icon input-icon-right">
                             <input type="text" class="form-control"
-                                   placeholder="Username">
+                                   placeholder="用户名">
                             <i class="ace-icon fa fa-user"></i>
                         </span>
                     </label>
@@ -30,7 +30,7 @@
                     <label class="block clearfix">
                         <span class="block input-icon input-icon-right">
                             <input type="password" class="form-control"
-                                   placeholder="Password">
+                                   placeholder="密码">
                             <i class="ace-icon fa fa-lock"></i>
                         </span>
                     </label>
@@ -38,7 +38,7 @@
                     <label class="block clearfix">
                         <span class="block input-icon input-icon-right">
                             <input type="password" class="form-control"
-                                   placeholder="Repeat password">
+                                   placeholder="重复密码">
                             <i class="ace-icon fa fa-retweet"></i>
                         </span>
                     </label>
@@ -46,8 +46,8 @@
                     <label class="block">
                         <input type="checkbox" class="ace">
                         <span class="lbl">
-                            I accept the
-                            <a href="#">User Agreement</a>
+                            我同意
+                            <a href="#">用户协议</a>
                         </span>
                     </label>
 
@@ -56,12 +56,12 @@
                     <div class="clearfix">
                         <button type="reset" class="width-30 pull-left btn btn-sm">
                             <i class="ace-icon fa fa-refresh"></i>
-                            <span class="bigger-110">Reset</span>
+                            <span class="bigger-110">重填</span>
                         </button>
 
                         <button type="button"
                                 class="width-65 pull-right btn btn-sm btn-success">
-                            <span class="bigger-110">Register</span>
+                            <span class="bigger-110">注册</span>
 
                             <i class="ace-icon fa fa-arrow-right icon-on-right"></i>
                         </button>
