--- a/javascript/partials/login/forget.html
+++ b/javascript/partials/login/forget.html
@@ -3,12 +3,12 @@
         <div class="widget-main">
             <h4 class="header red lighter bigger">
                 <i class="ace-icon fa fa-key"></i>
-                Retrieve Password
+                找回密码
             </h4>
 
             <div class="space-6"></div>
             <p>
-                Enter your email and to receive instructions
+                请填入邮箱地址来找回密码
             </p>
 
             <form>
@@ -16,7 +16,7 @@
                     <label class="block clearfix">
                         <span class="block input-icon input-icon-right">
                             <input type="email" class="form-control"
-                                   placeholder="Email">
+                                   placeholder="邮箱地址">
                             <i class="ace-icon fa fa-envelope"></i>
                         </span>
                     </label>
@@ -25,7 +25,7 @@
                         <button type="button"
                                 class="width-35 pull-right btn btn-sm btn-danger">
                             <i class="ace-icon fa fa-lightbulb-o"></i>
-                            <span class="bigger-110">Send Me!</span>
+                            <span class="bigger-110">发送</span>
                         </button>
                     </div>
                 </fieldset>
