特效优化，移动端的适配

--- a/javascript/partials/login/login.html
+++ b/javascript/partials/login/login.html
@@ -69,7 +69,7 @@
 
         <div class="toolbar clearfix">
             <div>
-                <a ui-sref="login.forget" data-target="#forgot-box" class="forgot-password-link">
+                <a ui-sref="login.forget" data-target="#forgot-box" class="forgot-password-link red">
                     <i class="ace-icon fa fa-arrow-left"></i>
                     忘记密码
                 </a>
