--- a/javascript/partials/directive/toolbar.html
+++ b/javascript/partials/directive/toolbar.html
@@ -23,7 +23,7 @@
         <i class="ace-icon fa fa-cog icon-only bigger-110"></i>
     </a>
 
-    <ul class="dropdown-menu dropdown-only-icon dropdown-yellow dropdown-menu-right dropdown-caret dropdown-close bouncy-scale-in"
+    <ul class="dropdown-menu dropdown-only-icon dropdown-yellow dropdown-menu-right dropdown-caret dropdown-close none-leave bouncy-scale-in"
         ng-show="isOpen">
         <li ng-repeat="tool in tools">
             <a class="tooltip-info"
