--- a/javascript/partials/login/index.html
+++ b/javascript/partials/login/index.html
@@ -1,4 +1,4 @@
-<div class="main-container" ng-controller="LoginController as loginCtl">
+<div class="main-container" ng-controller="LoginHomeController as loginHomeCtl">
     <div class="main-content">
         <div class="row">
             <div class="col-sm-10 col-sm-offset-1">
@@ -16,7 +16,7 @@
 
                     <div class="position-relative">
 
-                        <div ui-view="contentView" class="rotate-in my-rotate-in"></div>
+                        <div ui-view="contentView" class="rotate-in none-leave"></div>
 
                     </div>
                 </div>
