--- a/javascript/partials/login/login.html
+++ b/javascript/partials/login/login.html
@@ -1,4 +1,5 @@
-<div id="login-box" class="login-box visible widget-box no-border navbar-fixed-top">
+<div class="login-box visible widget-box no-border navbar-fixed-top"
+        ng-controller="LoginController as loginCtl">
     <div class="widget-body">
         <div class="widget-main">
             <h4 class="header blue lighter bigger">
@@ -35,7 +36,8 @@
                         </label>
 
                         <button type="button"
-                                class="width-35 pull-right btn btn-sm btn-primary">
+                                class="width-35 pull-right btn btn-sm btn-primary"
+                                ng-click="loginCtl.doLogin()">
                             <i class="ace-icon fa fa-key"></i>
                             <span class="bigger-110">登录</span>
                         </button>
