--- a/javascript/partials/login/login.html
+++ b/javascript/partials/login/login.html
@@ -1,5 +1,5 @@
 <div class="login-box visible widget-box no-border navbar-fixed-top"
-        ng-controller="LoginController as loginCtl">
+     ng-controller="LoginController as loginCtl">
     <div class="widget-body">
         <div class="widget-main">
             <h4 class="header blue lighter bigger">
@@ -8,43 +8,39 @@
             </h4>
 
             <div class="space-6"></div>
-
             <form>
-                <fieldset>
-                    <label class="block clearfix">
-                        <span class="block input-icon input-icon-right">
-                            <input type="text" class="form-control"
-                                   placeholder="用户名">
-                            <i class="ace-icon fa fa-user"></i>
-                        </span>
+
+                <div class="form-group">
+                    <label class="sr-only" for="username">用户名</label>
+                    <span class="block input-icon input-icon-right">
+                        <input type="text" placeholder="用户名" name="username" class="form-control">
+                        <i class="ace-icon fa fa-user"></i>
+                    </span>
+                </div>
+
+                <div class="form-group">
+                    <label for="password" class="sr-only"></label>
+                    <span class="block input-icon input-icon-right">
+                        <input type="password" class="form-control" placeholder="密码">
+                        <i class="ace-icon fa fa-lock"></i>
+                    </span>
+                </div>
+                <div class="space"></div>
+
+                <div class="form-group">
+                    <label class="inline">
+                        <input type="checkbox" class="ace">
+                        <span class="lbl">记住我</span>
                     </label>
+                    <button type="button"
+                            class="width-35 pull-right btn btn-sm btn-primary"
+                            ng-click="loginCtl.doLogin()">
+                        <i class="ace-icon fa fa-key"></i>
+                        <span class="bigger-110">登录</span>
+                    </button>
+                </div>
 
-                    <label class="block clearfix">
-                        <span class="block input-icon input-icon-right">
-                            <input type="password" class="form-control"
-                                   placeholder="密码">
-                            <i class="ace-icon fa fa-lock"></i>
-                        </span>
-                    </label>
-
-                    <div class="space"></div>
-
-                    <div class="clearfix">
-                        <label class="inline">
-                            <input type="checkbox" class="ace">
-                            <span class="lbl">记住我</span>
-                        </label>
-
-                        <button type="button"
-                                class="width-35 pull-right btn btn-sm btn-primary"
-                                ng-click="loginCtl.doLogin()">
-                            <i class="ace-icon fa fa-key"></i>
-                            <span class="bigger-110">登录</span>
-                        </button>
-                    </div>
-
-                    <div class="space-4"></div>
-                </fieldset>
+                <div class="space-4"></div>
             </form>
 
             <div class="social-or-login center">
