--- a/javascript/partials/pages/test2.html
+++ b/javascript/partials/pages/test2.html
@@ -15,12 +15,7 @@
             <div class="position-relative">
                 <h1>simpleForm</h1>
 
-                <span ng-bind="testCtl.formData.email"></span>
-
-                <simple-form setting="testCtl.formSettings" ng-model="testCtl.formData">
-
-                </simple-form>
-
+                <simple-form setting="testCtl.formSettings" ng-model="testCtl.formData"></simple-form>
                 <!--<dynamic-form schema="testCtl.formSchema"-->
                               <!--ng-model="testCtl.formModel"-->
                               <!--submit="testCtl.submit()"-->
