--- a/javascript/partials/directive/simpleform/views/simpleform_editor.html
+++ b/javascript/partials/directive/simpleform/views/simpleform_editor.html
@@ -3,7 +3,9 @@
 
     <label class="control-label col-sm-2 hidden-xs">
         <span ng-bind="field.label"></span>
-        <i ng-if="field.required" class="glyphicon glyphicon-info-sign" title="必填项"></i>
+        <i ng-if="field.required"
+           class="glyphicon blue glyphicon-info-sign"
+           title="必填项"></i>
     </label>
 
     <div class="col-sm-10">
