--- a/javascript/partials/directive/simpleform/views/textarea.html
+++ b/javascript/partials/directive/simpleform/views/textarea.html
@@ -1,11 +1,12 @@
-<input class="form-control"
-       ng-model="model[key]"
-       type="{{field.type}}"
-       placeholder="{{ field.placeholder }}"
-       name="{{ key }}"
-       ng-readonly="field.readonly"
-       ng-disabled="field.disabled"
-       ng-required="field.required">
+<textarea class="form-control"
+          ng-model="model[key]"
+          placeholder="{{ field.placeholder }}"
+          name="{{ key }}"
+          ng-readonly="field.readonly"
+          ng-disabled="field.disabled"
+          ng-required="field.required">
+
+</textarea>
 
 <span ng-if="$form[key].$valid" class="glyphicon glyphicon-ok form-control-feedback"></span>
 <span ng-if="$form[key].$invalid" class="glyphicon glyphicon-remove form-control-feedback"></span>
