--- a/javascript/partials/directive/simpleform/simpleform-horizontal.html
+++ b/javascript/partials/directive/simpleform/simpleform-horizontal.html
@@ -2,6 +2,7 @@
     <simple-form-editor ng-model="model"
                         field="field"
                         key="key"
+                        show-error="setting.showError"
                         ng-repeat="(key, field) in setting.fields"></simple-form-editor>
 
     <ng-transclude></ng-transclude>
