--- a/javascript/partials/directive/simpleform/views/simpleform_editor.html
+++ b/javascript/partials/directive/simpleform/views/simpleform_editor.html
@@ -1,5 +1,5 @@
 <div class="form-group has-feedback"
-     ng-class="{'has-error':$form[key].$invalid}">
+     ng-class="{'has-error':$form[key].$invalid && (showError || $form[key].$dirty)}">
 
     <label class="control-label col-sm-2 hidden-xs">
         <span ng-bind="field.label"></span>
@@ -9,6 +9,10 @@
     </label>
 
     <div class="col-sm-10">
-        <simple-form-field key="key" $form="$form" field="field" ng-model="model"></simple-form-field>
+        <simple-form-field key="key"
+                           show-error="showError"
+                           $form="$form"
+                           field="field"
+                           ng-model="model"></simple-form-field>
     </div>
 </div>
