--- a/javascript/partials/home/home_footer.html
+++ b/javascript/partials/home/home_footer.html
@@ -2,7 +2,7 @@
 <div class="footer-inner">
     <div class="footer-content">
         <span class="bigger-120">
-            <span class="blue bolder">派趣科技</span>
+            <span class="blue bolder">网络科技</span>
             后台 &copy; 2015-2016
         </span>
     </div>
