--- a/javascript/partials/pages/test2.html
+++ b/javascript/partials/pages/test2.html
@@ -18,7 +18,11 @@
                              ng-model="testCtl.formData"
                              submit="testCtl.submit"
                              ng-cloak>
-                    <input type="submit" value="提交">
+                    <div class="form-group">
+                        <div class="col-sm-10 col-sm-offset-2 col-lg-offset-2">
+                            <input class="btn btn-success btn-sm" type="submit" value="提交表单">
+                        </div>
+                    </div>
                 </simple-form>
             </div>
         </div>
