--- a/javascript/partials/pages/test1.html
+++ b/javascript/partials/pages/test1.html
@@ -6,20 +6,13 @@
                 <i class="ace-icon fa fa-angle-double-right"></i>
                 TEST1 tatic &amp; Dynamic Tables
             </small>
-            <span ng-bind="testCtl.now"></span>
-
         </h1>
     </div>
 
     <div class="row">
         <div class="col-xs-12">
-            <div toolbar showmini="false" showtitle="true" tools="testCtl.tools" class="btn-group hidden-sm hidden-xs">
-                <div class="btn-group">
-
-                </div>
-            </div>
+            <div toolbar showmini="false" showtitle="true" tools="testCtl.tools" class="btn-group hidden-sm hidden-xs"></div>
             <div class="space-6"></div>
-
         </div>
         <div class="col-xs-12">
             <table id="simple-table" class="table table-striped table-bordered table-hover">
