--- a/javascript/partials/directive/simpleform/views/simpleform_editor.html
+++ b/javascript/partials/directive/simpleform/views/simpleform_editor.html
@@ -13,6 +13,7 @@
                            show-error="showError"
                            $form="$form"
                            field="field"
-                           ng-model="model"></simple-form-field>
+                           ng-model="model">
+        </simple-form-field>
     </div>
 </div>
