--- a/javascript/partials/pages/test2.html
+++ b/javascript/partials/pages/test2.html
@@ -16,6 +16,7 @@
                 <simple-form setting="testCtl.formSettings"
                              ng-model="testCtl.formData"
                              submit="testCtl.submit"
+                             format=""
                              ng-cloak>
                     <div class="form-group">
                         <div class="col-sm-10 col-sm-offset-2 col-lg-offset-2">
