--- a/javascript/partials/login/register.html
+++ b/javascript/partials/login/register.html
@@ -1,4 +1,4 @@
-<div id="signup-box" class="signup-box widget-box no-border visible">
+<div id="signup-box" class="signup-box widget-box no-border visible" ng-controller="RegisterController as regCtl">
     <div class="widget-body">
         <div class="widget-main">
             <h4 class="header green lighter bigger">
@@ -7,67 +7,35 @@
             </h4>
 
             <div class="space-6"></div>
-            <p> 请填写以下信息: </p>
+            <!--<p> 请填写以下信息: </p>-->
 
-            <form>
-                <fieldset>
-                    <label class="block clearfix">
-                        <span class="block input-icon input-icon-right">
-                            <input type="email" class="form-control"
-                                   placeholder="邮箱">
-                            <i class="ace-icon fa fa-envelope"></i>
-                        </span>
-                    </label>
+            <simple-form setting="regCtl.formSettings"
+                         ng-model="regCtl.formData"
+                         submit="regCtl.doRegister"
+                         format=""
+                         ng-cloak>
+                <div class="clearfix">
+                    <!--<button type="reset"-->
+                            <!--ng-disabled="regCtl.isBusy"-->
+                            <!--v-busy="regCtl.isBusy"-->
+                            <!--v-pressable-->
+                            <!--class="width-30 pull-left btn btn-sm">-->
+                        <!--<i class="ace-icon fa fa-refresh"></i>-->
+                        <!--<span class="bigger-110">重填</span>-->
+                    <!--</button>-->
 
-                    <label class="block clearfix">
-                        <span class="block input-icon input-icon-right">
-                            <input type="text" class="form-control"
-                                   placeholder="用户名">
-                            <i class="ace-icon fa fa-user"></i>
-                        </span>
-                    </label>
+                    <button type="submit"
+                            ng-disabled="regCtl.isBusy"
+                            v-busy="regCtl.isBusy"
+                            v-pressable
+                            class="pull-right btn btn-sm btn-success btn-block">
+                        <span class="bigger-110">注册</span>
 
-                    <label class="block clearfix">
-                        <span class="block input-icon input-icon-right">
-                            <input type="password" class="form-control"
-                                   placeholder="密码">
-                            <i class="ace-icon fa fa-lock"></i>
-                        </span>
-                    </label>
+                        <i class="ace-icon fa fa-arrow-right icon-on-right"></i>
+                    </button>
+                </div>
+            </simple-form>
 
-                    <label class="block clearfix">
-                        <span class="block input-icon input-icon-right">
-                            <input type="password" class="form-control"
-                                   placeholder="重复密码">
-                            <i class="ace-icon fa fa-retweet"></i>
-                        </span>
-                    </label>
-
-                    <label class="block">
-                        <input type="checkbox" class="ace">
-                        <span class="lbl">
-                            我同意
-                            <a href="#">用户协议</a>
-                        </span>
-                    </label>
-
-                    <div class="space-24"></div>
-
-                    <div class="clearfix">
-                        <button type="reset" class="width-30 pull-left btn btn-sm">
-                            <i class="ace-icon fa fa-refresh"></i>
-                            <span class="bigger-110">重填</span>
-                        </button>
-
-                        <button type="button"
-                                class="width-65 pull-right btn btn-sm btn-success">
-                            <span class="bigger-110">注册</span>
-
-                            <i class="ace-icon fa fa-arrow-right icon-on-right"></i>
-                        </button>
-                    </div>
-                </fieldset>
-            </form>
         </div>
 
         <div class="toolbar center">
