--- a/javascript/partials/login/login.html
+++ b/javascript/partials/login/login.html
@@ -18,11 +18,14 @@
                 <div class="space"></div>
                 <div class="form-group">
                     <label class="inline">
-                        <input type="checkbox" class="ace">
+                        <input type="checkbox" ng-model="loginCtl.formData.expire_in" class="ace">
                         <span class="lbl">记住我</span>
                     </label>
                     <button type="submit"
                             value="登录"
+                            ng-disabled="loginCtl.isBusy"
+                            v-busy="loginCtl.isBusy"
+                            v-pressable
                             class="width-35 pull-right btn btn-sm btn-primary">
                         <i class="ace-icon fa fa-key"></i>
                         <span class="bigger-110">登录</span>
