--- a/javascript/partials/login/forget.html
+++ b/javascript/partials/login/forget.html
@@ -34,7 +34,7 @@
         <!-- /.widget-main -->
 
         <div class="toolbar center">
-            <a ui-sref="login" data-target="#login-box" class="back-to-login-link">
+            <a ui-sref="login" class="back-to-login-link">
                 返回登陆页
                 <i class="ace-icon fa fa-arrow-right"></i>
             </a>
