--- a/javascript/partials/login/login.html
+++ b/javascript/partials/login/login.html
@@ -58,14 +58,14 @@
 
         <div class="toolbar clearfix">
             <div>
-                <a ui-sref="login.forget" data-target="#forgot-box" class="forgot-password-link red">
+                <a ui-sref="login.forget" class="forgot-password-link red">
                     <i class="ace-icon fa fa-arrow-left"></i>
                     忘记密码
                 </a>
             </div>
 
             <div>
-                <a ui-sref="login.register" data-target="#signup-box" class="user-signup-link">
+                <a ui-sref="login.register" class="user-signup-link">
                     注册
                     <i class="ace-icon fa fa-arrow-right"></i>
                 </a>
