--- a/javascript/partials/login/register.html
+++ b/javascript/partials/login/register.html
@@ -39,7 +39,7 @@
         </div>
 
         <div class="toolbar center">
-            <a ui-sref="login" data-target="#login-box" class="back-to-login-link">
+            <a ui-sref="login" class="back-to-login-link">
                 <i class="ace-icon fa fa-arrow-left"></i>
                 返回登陆页
             </a>
