--- a/javascript/partials/login/login.html
+++ b/javascript/partials/login/login.html
@@ -58,7 +58,7 @@
 
         <div class="toolbar clearfix">
             <div>
-                <a ui-sref="login.forget" class="forgot-password-link red">
+                <a ui-sref="login.forget_email" class="forgot-password-link red">
                     <i class="ace-icon fa fa-arrow-left"></i>
                     忘记密码
                 </a>
