--- a/javascript/partials/login/forget_phone.html
+++ b/javascript/partials/login/forget_phone.html
@@ -8,7 +8,7 @@
 
             <div class="space-6"></div>
             <p>
-                请填入手机号码来找回密码
+                请填入用户名来找回密码
             </p>
 
             <simple-form setting="forgetCtl.formSettings"
